// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render a button 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <button
        className="undefined-button undefined"
        name={undefined}
        onClick={undefined}
        value={undefined}
>
        
</button>,
      "className": "button",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          undefined,
        ],
        "className": "undefined-button undefined",
        "name": undefined,
        "onClick": undefined,
        "value": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        undefined,
      ],
      "type": "button",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <button
          className="undefined-button undefined"
          name={undefined}
          onClick={undefined}
          value={undefined}
>
          
</button>,
        "className": "button",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
          ],
          "className": "undefined-button undefined",
          "name": undefined,
          "onClick": undefined,
          "value": undefined,
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
        ],
        "type": "button",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button component should render the apppropriate button depending on which section prop is passed in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    section="vehicles"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <button
        className="vehicles-button undefined"
        name="vehicles"
        onClick={undefined}
        value={undefined}
>
        vehicles
</button>,
      "className": "button",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "vehicles",
          undefined,
        ],
        "className": "vehicles-button undefined",
        "name": "vehicles",
        "onClick": undefined,
        "value": undefined,
      },
      "ref": null,
      "rendered": Array [
        "vehicles",
        undefined,
      ],
      "type": "button",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <button
          className="vehicles-button undefined"
          name="vehicles"
          onClick={undefined}
          value={undefined}
>
          vehicles
</button>,
        "className": "button",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "vehicles",
            undefined,
          ],
          "className": "vehicles-button undefined",
          "name": "vehicles",
          "onClick": undefined,
          "value": undefined,
        },
        "ref": null,
        "rendered": Array [
          "vehicles",
          undefined,
        ],
        "type": "button",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
